--- a/src/main/res/layout/list_item.xml
+++ b/src/main/res/layout/list_item.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:orientation="vertical"
     android:layout_margin="12dp">
 
-    <TextView
-        android:id="@+id/noteTitle"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/editButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight=".30"
-        android:textSize="25sp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textColor="@color/colorTitle"/>
+        android:contentDescription="@string/edit_note_description"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:padding="2dp"
+        android:src="@drawable/ic_edit_note"
+        android:background="@color/white"/>
 
-    <TextView
-        android:layout_marginTop="2dp"
-        android:id="@+id/noteDescription"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight=".70"
-        android:textSize="18sp"
-        android:maxLines="2"
-        android:ellipsize="marquee"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/noteTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".30"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/colorTitle"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/noteDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_weight=".70"
+            android:ellipsize="marquee"
+            android:maxLines="2"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+</RelativeLayout>
