--- a/src/main/res/layout/new_note.xml
+++ b/src/main/res/layout/new_note.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/stitle"
-        android:layout_margin="2dp"/>
+        android:layout_margin="2dp"
+        android:inputType="text"/>
 
     <EditText
         android:id="@+id/newDesc"
