--- a/src/main/res/menu/delete_done.xml
+++ b/src/main/res/menu/delete_done.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/delete"
         app:showAsAction="never"
-        android:title="@string/mDoneDelete"/>
+        android:title="@string/done"/>
 
 </menu>
