--- a/src/main/res/menu/menu.xml
+++ b/src/main/res/menu/menu.xml
@@ -16,5 +16,5 @@
         android:visible="false"
         android:id="@+id/deleteDone"
         app:showAsAction="ifRoom"
-        android:title="@string/mDoneDelete"/>
+        android:title="@string/done"/>
 </menu>
